Update table record schema.
